<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".AddProductActivity"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_product_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="264dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:hint="@string/product_name_hint"
            app:endIconMode="custom"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_blur_on_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_product_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="264dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:hint="@string/product_description_hint"
            app:endIconMode="custom"
            app:endIconTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_product_name"
            app:startIconDrawable="@drawable/ic_baseline_art_track_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="addProduct"
            android:text="@string/add_product_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_product_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
